--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "axios": "^1.7.7",
+    "framer-motion": "^11.11.11",
     "next": "^14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-responsive-carousel": "^3.2.23",
     "three": "^0.170.0"
   },
   "devDependencies": {
