--- a/express-api/package.json
+++ b/express-api/package.json
@@ -8,11 +8,11 @@
     "build": " npm run build-ts",
     "vercel-build": "echo launching",
     "debug": "npm run build && npm run watch-debug",
-    "serve-debug": "nodemon --inspect dist/index.js",
-    "serve": "node dist/index.js",
+    "serve-debug": "nodemon --inspect dist/src/index.js",
+    "serve": "node dist/src/index.js",
     "start": "npm run serve",
     "test": "jest --forceExit --coverage --verbose",
-    "watch-node": "nodemon dist/index.js",
+    "watch-node": "nodemon dist/src/index.js",
     "watch-ts": "tsc -w",
     "dev": "nodemon",
     "watch-test": "npm run test --coverage --watchAl",
@@ -21,8 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.658.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -34,7 +34,7 @@
     "mongoose": "^8.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "sanitize-html": "^2.13.1",
     "socket.io": "^4.8.0",
     "swagger-jsdoc": "^6.2.8",
@@ -49,10 +49,10 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.21",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
-    "@types/multer-s3": "^3.0.3",
     "@types/node": "^22.5.4",
     "@types/nodemailer": "^6.4.15",
     "@types/sanitize-html": "^2.13.0",
